src/test/ui/occurs-check-2.stderr
error[E0308]: mismatched types
  --> $DIR/occurs-check-2.rs:7:9
   |
LL |     f = box g;
   |         ^^^^^
   |         |
   |         cyclic type of infinite size
   |         help: consider dereferencing the type: `*box g`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
